Fixes Select2 containers to prevent broken layout

--- a/assets/invoiceplane/sass/includes/_select2.scss
+++ b/assets/invoiceplane/sass/includes/_select2.scss
@@ -5,7 +5,6 @@
   margin: 0;
   position: relative;
   vertical-align: middle;
-  width: 100% !important;
 
   .select2-selection--single {
     box-sizing: border-box;
